[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ah-wrapper"
version = "1.0.0"
description = "Simple Python wrapper for Albert Heijn's API"
readme = "README.md"
license = "MIT"
authors = [
    {name = "AH Wrapper", email = "ah-wrapper@example.com"}
]
keywords = ["albert-heijn", "api", "wrapper", "products", "grocery"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "ruff>=0.1.0",
]

[project.scripts]
ah-wrapper = "ah_wrapper.cli:main"

[tool.ruff]
line-length = 88
target-version = "py37"
exclude = [".git", "__pycache__", ".venv", "venv", ".eggs", "*.egg", "build", "dist"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["--strict-markers"]

[dependency-groups]
dev = ["ruff>=0.1.0"]
